--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+2005-03-11  Jost Boekemeier <jostb@intern>
+
+	* INSTALL.WINDOWS: java.hosts and module version supported. CGI
+	version still recommended.
+
+	* bind.c (java_test_server): java.hosts for windows.
+
+	* client.c (try_connect_to_server): new function.
+	(java_connect_to_server, java_try_connect_to_server): Use it.
+
+	* protocol.c (GROW_QUOTE): Didn't work if len < 10.
+	(replaceQuote): Spell "&quote;" as "&quot;"
+	(java_createSecureEnvironment): Store server_name.
+	
+	* java.c (PHP_RSHUTDOWN_FUNCTION): Free server_name.
+	(java_get_server_name): Use java_try_connect_to_server.
+	
+	* php_java.h (closesocket): Alias for close on windows in order to
+	shut down the windows socket.
+
+	* php-java-bridgge.spec, VERSION: New version
+	
+		
 2005-03-09  Jost Boekemeier <jostb@intern>
 
 	* PROTOCOL.TXT: Document Bit 0 as reserved.
