--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,61 @@
+2005-03-27  Jost Boekemeier <jostb@intern>
+
+	* multicast.c, multicast.h: New files
+
+	* bind.c (test_server): New function.
+
+	* client.c (begin): Removed obsolete GET_RESULT.
+	(try_connect_to_server): pass down spec (M for Mono)
+	(java_connect_to_mono): New function
+
+	* config.m4: multicast.c added.
+
+	* init_cfg.c.in: Init multicast socket.
+
+	* server/php/java/bridge/JavaBridge.java (ObjectToString): New function.
+
+	* java.c (java_monoclass): Removed dup.
+	(__tostring): The automatic type conversions now use
+	ObjectToString. -- We want to avoid support calls when someone
+	attempts to "format" binary data e.g.: echo $byteArrayOutputStream + " ".
+	(cast): dito.
+
+	* java_bridge.c (php_java_call_function_handler): Check for mono
+	object, send out a multicast to find an Mono or NET VM. 
+	
+	* parser.c (parse): <P> must call BEGN, not END. This fixes a bug
+	in the 2.0 protocol which was not able to parse arrays into PHP 4.
+
+	* server/php/java/bridge/Parser.java (parse): dito.
+
+	* server/php/java/bridge/JavaBridgeClassLoader.java: Inherit from
+	URLClassLoader.
+
+	* server/php/java/bridge/Request.java (push): Array: An empty array is
+	not a null argument.
+
+	* tests.mono+net/load_assembly.php: Fixed typo.
+
+	* tests.mono+net/params.php: Copied from parms.php
+	
+	* tests.mono+net/parms.php: Removed.
+
+	* tests.php5/ShowResourses.java, tests.php5/showResources.jar,
+	tests.php5/showResources.php: New tests.
+
+	* tests.php5/arrayArray.php4: New PHP4 array test.
+
+	* tests.php5/printToOutputStream.php: New test
+
+	* server/php/java/bridge/TCPServerSocket.java (create): Start listener.
+
+	* server/php/java/bridge/Listener.java: New file.
+
+	* server/php/java/bridge/JavaBridge.java (getLoad): New function.
+	(run): Calculate load.
+	(loadLock): Lock object
+	
+	
 2005-03-15  Jost Boekemeier <jostb@intern>
 
 	* java.c (php_java_jsr_class_class_entry): Obsolete.
