--- a/README
+++ b/README
@@ -246,7 +246,7 @@ Build and execution instructions:
 
   and re-start the web server to activate this setting. A multicast
   packet is send and the bridge selects the first backend which has
-  a load <20.  If, for some reason, multicasts don't work on your 
+  a load <12.  If, for some reason, multicasts don't work on your 
   system you can use the java.hosts option instead. The following 
   example directs the bridge to two backends running on the local host: 
   java.hosts="127.0.0.1:9167;127.0.0.1:9168".
@@ -289,14 +289,6 @@ Build and execution instructions:
   The java.hosts setting specifies additional hosts running the
   PHP/Java Bridge; it should be used only if multicast datagrams 
   don't work on your system.  
-
-  During startup the bridge checks how to connect to the backend(s):
-  1) it checks if a local VM is available (java.socketname).  
-  2) If not (or if the option is switched off), it checks java.hosts. 
-     If switched off, it sends out a multicast datagram.  
-  3) If there were no responses from the backend pool, the bridge 
-     starts a private java VM based on the information in the java 
-     section of the php.ini (java.java, ...). 
 
 ---------------------------------------------
   Starting the PHP/Java Bridge automatically
@@ -366,8 +358,8 @@ Build and execution instructions:
   see install instructions above.
 
 ------------------------------------
-  Windows Installation
-  --------------------
+  Compiling a CGI binary on Windows
+  ---------------------------------
 
   This operating system has some unusal problems with shared libraries
   (DLL's). The autoconf/libtool documentation states:
@@ -487,22 +479,6 @@ Build and execution instructions:
    4: Log debug messages, including the c/s communication protocol.
 
   The default log level is 1.
-
-------------------------------------
-  Macintosh/PPC Installation
-  --------------------------
-  
-  The PHP/Java Bridge doesn't compile on OSX 10.2 or earlier because
-  certain functionality (sys/poll) is missing.  OSX 10.3 has issues
-  with the dynamic loader and the Apple Java VM, which cannot run
-  the bridge reliably.
-
-  If you want to run the Bridge on a PPC, please install IBM java
-  1.4.1 or above on RedHat Enterprise Linux for Power PC, please see
-
-    http://www-106.ibm.com/developerworks/java/jdk/linux/tested.html
-
-  for details.  
 
 ---------------------------------------------
   GCJ/GNU Java issues
